--- a/EEIC-Checker-External-r2b.ipynb
+++ b/EEIC-Checker-External-r2b.ipynb
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "%run ./(Clone)_EEIC-Checker-External-r2b-Parent"
+    "%run ./EEIC-Checker-External-r2b-Parent"
    ]
   },
   {
